force-app/main/default/objects/Care_Plan__c/fields/Goals__c.field-meta.xml
<CustomField>
    <fullName>Goals__c</fullName>
    <label>Goals</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>