force-app/main/default/objects/Care_Plan__c/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <label>Plan Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Treatment</fullName>
            </value>
            <value>
                <fullName>Recovery</fullName>
            </value>
            <value>
                <fullName>Preventive</fullName>
            </value>
            <value>
                <fullName>Chronic Disease Management</fullName>
            </value>
            <value>
                <fullName>Post-Surgery</fullName>
            </value>
            <value>
                <fullName>Wellness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>