force-app/main/default/objects/Care_Plan__c/fields/Treatment_Summary__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Summary__c</fullName>
    <label>Treatment Summary</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>